# rustler_precompilation_example

./: .gitignore  CHANGELOG.md  README.md  mix.exs
.github/workflows/: release.yml
lib/: rustler_precompilation_example.ex
lib/rustler_precompilation_example/: native.ex
native/example/: Cargo.toml  Cross.toml  README.md
native/example/.cargo/: config  config.toml
native/example/src/: lib.rs
test/: rustler_precompilation_example_test.exs
