[package]
name = "example"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "example"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.29", default-features = false, features = ["derive"] }

[features]
default = ["nif_version_2_15"]

# A silly feature to test variants.
wrong_math = []

# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
